sorting and graph